[gd_scene load_steps=4 format=3 uid="uid://b32xjh5pdkuru"]

[ext_resource type="Theme" uid="uid://wdhwb87x2roh" path="res://resources/themes/pixel_ui_theme/PixelTheme_sky.tres" id="1_3bamp"]
[ext_resource type="Script" path="res://assets/menus/light/light_menu.gd" id="2_kipmi"]
[ext_resource type="Theme" uid="uid://dopunvp7uxup1" path="res://resources/themes/pixel_ui_theme/PixelTheme_blood.tres" id="3_1x86m"]

[node name="LightMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_3bamp")
script = ExtResource("2_kipmi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -174.0
offset_right = 158.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabBar" type="TabBar" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = -40.0
offset_right = 84.0
tab_count = 1
tab_0/title = "Light"

[node name="Light" type="Label" parent="Panel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -39.0
text = "
"

[node name="GridContainer" type="VBoxContainer" parent="Panel/Light"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 491.0
offset_bottom = 337.0
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Intensity" type="Label" parent="Panel/Light/GridContainer"]
layout_mode = 2
text = "Intensity %:"

[node name="IntensityEdit" type="SpinBox" parent="Panel/Light/GridContainer/Intensity"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 174.0
offset_top = -4.0
offset_right = 256.0
offset_bottom = 30.0
value = 100.0

[node name="Bright" type="Label" parent="Panel/Light/GridContainer"]
layout_mode = 2
text = "Bright:"

[node name="BrightEdit" type="SpinBox" parent="Panel/Light/GridContainer/Bright"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 174.0
offset_top = -4.0
offset_right = 256.0
offset_bottom = 30.0
max_value = 10.0
value = 5.0

[node name="Faint" type="Label" parent="Panel/Light/GridContainer"]
layout_mode = 2
text = "Faint:"

[node name="FaintEdit" type="SpinBox" parent="Panel/Light/GridContainer/Faint"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 174.0
offset_top = -4.0
offset_right = 256.0
offset_bottom = 30.0
max_value = 10.0
value = 10.0

[node name="Following" type="Label" parent="Panel/Light/GridContainer"]
layout_mode = 2
text = "Following:"

[node name="FollowingEdit" type="LineEdit" parent="Panel/Light/GridContainer/Following"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 174.0
offset_top = -3.0
offset_right = 297.0
offset_bottom = 31.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Light"]
layout_mode = 2
offset_left = 13.0
offset_top = 219.0
offset_right = 241.0
offset_bottom = 253.0
size_flags_vertical = 0
alignment = 1

[node name="AcceptButton" type="Button" parent="Panel/Light/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="CancelButton" type="Button" parent="Panel/Light/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="ApplyButton" type="Button" parent="Panel/Light/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"

[node name="IdLabel" type="Label" parent="Panel/Light"]
layout_mode = 0
offset_left = 273.0
offset_top = 223.0
offset_right = 318.0
offset_bottom = 252.0
text = "ID: "

[node name="IdEdit" type="LineEdit" parent="Panel/Light/IdLabel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 38.0
offset_top = -4.0
offset_right = 144.0
offset_bottom = 30.0
text = "ABCDEFGH"
editable = false

[node name="DeleteButton" type="Button" parent="Panel/Light/IdLabel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 148.0
offset_top = -4.0
offset_right = 230.0
offset_bottom = 30.0
theme = ExtResource("3_1x86m")
text = "Delete"
